--- a/html-css/100Days/Day01/index.css
+++ b/html-css/100Days/Day01/index.css
@@ -10,11 +10,13 @@
     border-radius: 2px;
     box-shadow: 1px 2px 10px 0px rgba(0,0,0,0.3);
     background: #43389F;
+    /* okk */
     background: -webkit-linear-gradient(bottom left, #43389F 0%, #4ec6ca 100%);
     background: -moz-linear-gradient(bottom left, #43389F 0%, #4ec6ca 100%);
     background: -o-linear-gradient(bottom left, #43389F 0%, #4ec6ca 100%);
     background: linear-gradient(to top right, #43389F 0%, #4ec6ca 100%); 
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#43389F', endColorstr='#4ec6ca',GradientType=1 ); 
+   
     font-family: 'Courier New', 'Courier', sans-serif;
     color: #fff;
     -webkit-font-smoothing: antialiased;
@@ -49,7 +51,7 @@
   }
   .one-two{
     position: absolute;
-    z-index: 1;
+    z-index: 20;
     top: 0;
     height: 100px;
     width: 24px;
