--- a/Nodejs/FreelanceProject-MERNB/views/partials/navbar.hbs
+++ b/Nodejs/FreelanceProject-MERNB/views/partials/navbar.hbs
@@ -11,15 +11,15 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm py-3 "  style="background: linear-gradient(90deg, #b3c6ff, #ffffff);">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="{{data.brandIconUrl}}" alt="Logo" width="40" height="40" class="rounded-circle d-inline-block align-text-top" />
-            {{data.brandName}}
+            <img src="/webapp/static/images/download.png" alt="Logo" width="40" height="40" class="rounded-circle d-inline-block align-text-top" />
+            Traveller Adventure
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                {{#each data.links}}
+                {{#each data}}
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{{this.url}}">{{this.label}}</a>
                 </li>
