fix : Abouut file

--- a/Nodejs/FreelanceProject-MERNB/views/about.hbs
+++ b/Nodejs/FreelanceProject-MERNB/views/about.hbs
@@ -7,6 +7,6 @@
 </head>
 <body>
      {{> navbar data=data}}
-    <h1>Work in Progress</h1>
+    <h1>Work in Progress !Not useFull</h1>
 </body>
 </html>
