feat :Added Portfolio update

--- a/Nodejs/FreelanceProject-MERNB/views/index.hbs
+++ b/Nodejs/FreelanceProject-MERNB/views/index.hbs
@@ -32,10 +32,12 @@
           <p>
             This website is built with Node.js for the backend, HBS for templating, and MongoDB for dynamic content storage. It uses Tailwind CSS for styling and is deployed on AWS EC2 with CI/CD pipelines.
           </p>
+         <a href="/gallery">
         <button id="services_section" "btn bg-secondary text-center">
           Explore More
-          <i class="fa fa-arrow-right ml-2"></i>
+         <i class="fa fa-arrow-right ml-2"></i>
         </button>
+        </a>
   </section>
   {{!-- {{services section}} --}}
 <section id="services_section" class="py-4 bg-dark">
