--- a/Nodejs/FreelanceProject-MERNB/views/partials/navbar.hbs
+++ b/Nodejs/FreelanceProject-MERNB/views/partials/navbar.hbs
@@ -1,35 +1,60 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NavBar Component</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
-<!-- Ensure the nav bar is structured correctly -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm py-3 "  style="background: linear-gradient(90deg, #b3c6ff, #ffffff);">
-    <div class="container">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <!-- Ensure the nav bar is structured correctly -->
+    <nav
+      class="navbar navbar-expand-lg navbar-light bg-light shadow-sm py-3"
+      style="background: linear-gradient(90deg, #b3c6ff, #ffffff);"
+    >
+      <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="/webapp/static/images/download.png" alt="Logo" width="40" height="40" class="rounded-circle d-inline-block align-text-top" />
-            Traveller Adventure
+          <img
+            src="/webapp/static/images/download.png"
+            alt="Logo"
+            width="40"
+            height="40"
+            class="rounded-circle d-inline-block align-text-top"
+          />
+          Traveller Adventure
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                {{#each data}}
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{this.url}}">{{this.label}}</a>
-                </li>
-                {{/each}}
-            </ul>
-        </div>
-    </div>
-</nav>
+        <input
+          type="search"
+          name="searchPlace"
+          class="form-control rounded-pill border px-3 py-2 w-25"
+          placeholder="Search for a place"
+        />
 
-   <!-- Bootstrap JS for navbar functionality -->
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            {{#each data}}
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="{{this.url}}"
+                >{{this.label}}</a>
+              </li>
+            {{/each}}
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Bootstrap JS for navbar functionality -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
