--- a/react-daily/src/index.css
+++ b/react-daily/src/index.css
@@ -66,3 +66,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+/* src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
