Added Little Animation in portfolio

--- a/Nodejs/FreelanceProject-MERNB/views/index.hbs
+++ b/Nodejs/FreelanceProject-MERNB/views/index.hbs
@@ -54,7 +54,7 @@
             <h5 class="card-title text-light font-weight-bold">{{this.title}}</h5>
             <p class="card-text text-light" >{{this.description}}</p>
             <div class="d-flex justify-content-around">
-              <a href={{this.link1}} class="btn btn-primary">{{this.link1Text}}</a>
+              <a href="/payment" class="btn btn-primary">{{this.link1Text}}</a>
               <a href={{this.link2}} class="btn btn-secondary">{{this.link2Text}}</a>
             </div>
           </div>
